--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,11 +6,14 @@ services:
     build: ./ms-cinema-api/
     env_file:
       - ./.env
-    ports:
-      - 127.0.0.1:8000:8000
 
   loader:
     build: ./etl/
+    env_file:
+      - ./.env
+
+  voice_assistent:
+    build: ./voice_assistent/
     env_file:
       - ./.env
 
@@ -32,7 +35,7 @@ services:
       - discovery.type=single-node
       - xpack.security.enabled=false
       - xpack.monitoring.collection.enabled=true
-      - "ES_JAVA_OPTS=-Xms4096m -Xmx4096m"
+      - "ES_JAVA_OPTS=-Xms2048m -Xmx2048m"
     volumes:
       - elastic_data:/usr/share/elasticsearch/data:rw
     depends_on:
