--- a/infra/nginx/site.conf
+++ b/infra/nginx/site.conf
@@ -18,6 +18,12 @@ server {
     proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://api:8000;
         }
+        location ~ ^/(alice_api) {
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Forwarded-Host $host;
+    proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://voice_assistent:8000;
+        }
 
       error_page   500 502 503 504  /50x.html;
 }
