--- a/infra/nginx/site.conf
+++ b/infra/nginx/site.conf
@@ -22,7 +22,7 @@ server {
     proxy_set_header        Host $host;
     proxy_set_header        X-Forwarded-Host $host;
     proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://voice_assistent:8000;
+        proxy_pass http://voice_assistant:8000;
         }
 
       error_page   500 502 503 504  /50x.html;
