--- a/voice_assistant/requirements.txt
+++ b/voice_assistant/requirements.txt
@@ -4,4 +4,4 @@ uvicorn==0.12.2
 uvloop==0.17.0 ; sys_platform != "win32" and implementation_name == "cpython" 
 pydantic-settings==2.0.3
 gunicorn==21.2.0
-requests
+requests==2.31.0
